--- a/style/styles.css
+++ b/style/styles.css
@@ -1,3 +1,5 @@
 @import url('./reset.css');
 @import url('./base.css');
 @import url('./our-collection.css');
+@import url('./order.css');
+@import url('./testimonials.css');
