--- a/style/order.css
+++ b/style/order.css
@@ -36,9 +36,6 @@
     }
 }
 
-
-
-
 input, textarea {
     padding: 14px 16px;
     border: 1px solid rgba(252, 249, 249, 0.10);
@@ -84,7 +81,7 @@ textarea {
     resize: none;
 }
 
-.submit {
+.btn {
     padding: 14px 36px;
     border-radius: 15px;
     border: 1px solid rgba(252, 249, 249, 0.10);
@@ -102,15 +99,20 @@ textarea {
 }
 
 @media screen and (min-width: 768px) {
-    .submit {
+    .btn {
         padding: 14px 39px;
         font-size: 16px;
         letter-spacing: -0.64px;
+    }
+}
+
+@media screen and (min-width: 768px) and (max-width: 1278.98px) {
+    .submit-btn {
         margin-bottom: 100px;
     }
 }
 
-.submit:hover {
+.btn:hover {
     border: 1px solid #ECD979;
 }
 
