--- a/style/styles.css
+++ b/style/styles.css
@@ -1,5 +1,8 @@
 @import url('./reset.css');
 @import url('./base.css');
+@import url('./hero.css');
+@import url('./about-us.css');
 @import url('./our-collection.css');
+@import url('./photo.css');
 @import url('./order.css');
 @import url('./testimonials.css');
